--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ a {
 
 
 /*------------    Navigation    ------------*/
-nav {
+#main-nav {
   text-align: center;
   background: #7ea2e6;
   box-shadow: 0 5px 15px #A7BFE8;
@@ -64,6 +64,67 @@ nav {
   font-weight: 400;
   padding: 5px 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*------------    Profile    ------------*/
+#profile {
+  text-align: center;
+}
+
+.profile-pic {
+  margin-top: 50px;
+  width: 72%;
+  border-radius: 5px;
+}
+
+#profile p {
+  width: 90%;
+  margin: 15px auto 0 auto;
+  line-height: 1.35;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
