--- a/css/style.css
+++ b/css/style.css
@@ -148,11 +148,19 @@ a {
 
 /*-------   Projects   -------*/
 .project {
-  margin: 10px auto 0 auto;
+  margin: 20px auto 0 auto;
+  border: 1px solid rgba(168, 168, 168, 0.418);
+  background-color: rgba(168, 168, 168, 0.045);
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 20px;
 }
 
 .project-pic {
   width: 100%;
+  border-radius: 4px;
 }
 
 .project-title {
