--- a/css/style.css
+++ b/css/style.css
@@ -177,12 +177,11 @@ a {
   margin: 40px auto 0 auto;
 
   border: 2px solid purple;
-  background-color: orange;
-  height: 300px;
+  height: 500px;
   margin-bottom: 200px;
 }
 
-#contact p {
+.contact-intro {
   margin-top: 22px;
   line-height: 1.35;
 }
@@ -193,4 +192,37 @@ a {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--- Phone ---*/
+.contact-phone {
+  width: 80%;
+  margin: 30px auto 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-phone img {
+  width: 15px;
+  height: 15px;
+}
+
+.contact-phone p {
+  padding-left: 5px;
+}
+
+.contact-phone a {
+  padding-left: 5px;
+}
 
