--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,6 @@ a {
   width: 90%;
   text-align: center;
   margin: 40px auto 0 auto;
-  margin-bottom: 100px;
 }
 
 .contact-intro {
@@ -247,3 +246,43 @@ a {
 .contact-email a {
   padding-left: 5px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*------------    Footer Menu    ------------*/
+
+footer {
+  width: 100%;
+  margin-top: 50px;
+  padding: 30px 4%;
+  border-top: 1px solid rgba(168, 168, 168, 0.418);
+  display: flex;
+  justify-content: space-between;
+}
+
+footer h4 {
+  color: #353535;
+  font-size: 1.2em;
+  font-weight: 400;
+}
+
+
+
+
+
+
+
+
+
+
+
