--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /* ____________________________________________________________________
 ---------------------    Responsive Layout 2.0    ---------------------
 ----------------------------------------------------------------------- */
-
 /*------------    Defaults    ------------*/
 *,
 *:before,
@@ -31,6 +30,7 @@ a {
 }
 
 
+
 /*------------    Navigation    ------------*/
 #main-nav {
   text-align: center;
@@ -40,7 +40,6 @@ a {
 
 .name {
   padding: 10px 0;
-  font-size: 2em; /*esto sobra*/
   color: #353535;
 }
 
@@ -49,7 +48,6 @@ a {
 }
 
 .nav-section {
-  cursor: pointer;
   font-size: 1.45em;
   font-weight: 400;
   padding: 5px 0;
@@ -76,10 +74,6 @@ a {
 }
 
 
-
-
-
-
 /*--- Separators ---*/
 .separator {
   border-top: 1px solid rgb(101, 101, 129);
@@ -92,12 +86,6 @@ a {
 }
 
 
-
-
-
-
-
-
 /*------------    Portfolio    ------------*/
 #portfolio {
   width: 90%;
@@ -105,12 +93,9 @@ a {
   text-align: center;
 }
 
-
 .projects-container {
-  /* background: rgb(73, 65, 184); */
+  /* This will be used for FlexBox*/
 }
-
-
 
 /*-------   Projects   -------*/
 .project {
@@ -118,10 +103,7 @@ a {
   border: 1px solid rgba(168, 168, 168, 0.418);
   background-color: rgba(168, 168, 168, 0.045);
   border-radius: 5px;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 20px;
+  padding: 10px 10px 20px 10px;
 }
 
 .project-pic {
@@ -143,126 +125,62 @@ a {
 
 
 
-
-
-
-
-
-
-
-
-
-
-/*------------    Bio    ------------*/
-#bio {
-  width: 90%;
-  text-align: center;
-  margin: 40px auto 0 auto;
-}
-
-#bio p {
-  margin-top: 22px;
-  line-height: 1.35;
-  font-style: italic;
-}
-
-
-
-
-
-/*------------    Contact    ------------*/
+/*------------    Bio & Contact Containers    ------------*/
+#bio,
 #contact {
   width: 90%;
   text-align: center;
   margin: 40px auto 0 auto;
 }
 
+/*----------   Bio   ----------*/
+#bio p {
+  margin-top: 22px;
+  line-height: 1.35;
+  font-style: italic;
+}
+
+/*----------   Contact   ----------*/
 .contact-intro {
   margin-top: 22px;
   line-height: 1.35;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*--- Phone ---*/
-.contact-phone {
-  width: 80%;
-  margin: 30px auto 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.contact-phone img {
-  width: 15px;
-  height: 15px;
-}
-
-.contact-phone p {
-  padding-left: 5px;
-}
-
-.contact-phone a {
-  padding-left: 5px;
-}
-
-
-
-/*--- Email ---*/
+/*-----  Phone & Email  -----*/
+.contact-phone,
 .contact-email {
   width: 80%;
-  margin: 15px auto 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.contact-phone {
+  margin: 30px auto 0 auto;
+}
+.contact-email {
+  margin: 15px auto 0 auto;
+}
+
+/*- Icons -*/
+.contact-phone img,
 .contact-email img {
   width: 15px;
   height: 15px;
 }
 
-.contact-email p {
-  padding-left: 5px;
-}
-
+/*- Text -*/
+.contact-phone p,
+.contact-email p,
+.contact-phone a,
 .contact-email a {
   padding-left: 5px;
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
 /*------------    Footer Menu    ------------*/
-
 footer {
-  width: 100%;
   margin-top: 50px;
   padding: 30px 4%;
   border-top: 1px solid rgba(168, 168, 168, 0.418);
@@ -275,14 +193,3 @@ footer h4 {
   font-size: 1.2em;
   font-weight: 400;
 }
-
-
-
-
-
-
-
-
-
-
-
