--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,9 @@ a {
   padding: 5px 0;
 }
 
+#main-nav a {
+  color: #353535;
+}
 
 
 /*------------    Profile    ------------*/
@@ -278,6 +281,176 @@ footer h4 {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/***********************************************************------ MARKER*/
+/*___________________________________
+------------  MOBILE XL  ------------
+-------------------------------------*/
+@media all and (min-width: 545px) {
+  body {
+    /* background-color: orange; */
+  }
+
+  /*----  Navigation ----*/
+  #main-nav {
+    /* text-align: center;
+    background: #7ea2e6;
+    box-shadow: 0 5px 15px #A7BFE8; */
+    padding-bottom: 10px;
+  }
+  .name {
+    /* padding: 10px 0;
+    color: #353535; */
+    padding: 20px 0;
+  }
+  #nav-sections {
+    /* padding: 7px 0; */
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 450px;
+    margin: auto;
+  }
+  .nav-section {
+    /* font-size: 1.45em;
+    font-weight: 400;
+    padding: 5px 0; */
+    padding: 5px 10px;
+    /* background-color: orange; */
+  }
+  #main-nav a {
+    /* color: #353535; */
+  }
+
+
+
+
+
+
+
+  /*----  Profile ----*/
+  #profile {
+    /* text-align: center;
+    margin-bottom: 40px; */
+  }
+
+  .profile-pic {
+    /* margin-top: 40px;
+    width: 72%;
+    border-radius: 5px;
+    max-width: 290px; */
+    max-width: 380px;
+  }
+
+  #profile p {
+    /* width: 90%;
+    margin: 15px auto 0 auto;
+    line-height: 1.35;
+    max-width: 380px; */
+    font-size: 1.04em;
+    max-width: 440px;
+  }
+
+  /*--- Section Titles ---*/
+  .section-title {
+    font-size: 2em;
+  }
+
+
+
+
+
+
+
+
+
+  /*----  Portfolio  ----*/
+  #portfolio {
+    /* width: 90%; */
+    /* margin: 40px auto; */
+    /* text-align: center; */
+  }
+  .projects-container {
+    /* This will be used for FlexBox*/
+  }
+  /*-- Projects --*/
+  .project {
+    /* margin: 30px auto 0 auto; */
+    /* border: 1px solid rgba(168, 168, 168, 0.418); */
+    /* background-color: rgba(168, 168, 168, 0.045); */
+    /* border-radius: 5px; */
+    /* padding: 12px 12px 20px 12px; */
+    /* width: 300px; */
+    /* height: 340px; */
+  }
+  .project-pic {
+    /* width: 100%; */
+    /* border-radius: 4px; */
+  }
+  .project-title {
+    /* font-weight: 400; */
+    /* font-size: 1.5em; */
+    /* margin-top: 25px; */
+    font-size: 1.6em;
+  }
+  .project-text {
+    /* margin-top: 10px; */
+    /* margin-top: 15px; */
+    /* font-size: 0.91em; */
+    /* line-height: 1.25; */
+    font-size: 1.01em;
+    line-height: 1.3;
+  }
+
+  /*----  Bio  ----*/
+  #bio p {
+    /* margin-top: 22px;
+    line-height: 1.35;
+    font-style: italic; */
+    font-size: 1.01em;
+  }
+
+  .contact-phone p,
+  .contact-email p,
+  .contact-phone a,
+  .contact-email a {
+    /* padding-left: 5px; */
+    font-size: 1.01em;
+  }
+
+
+  /*------------    Footer Menu    ------------*/
+  footer {
+    /* margin-top: 50px;
+    padding: 30px 4%;
+    border-top: 1px solid rgba(168, 168, 168, 0.418);
+    display: flex;
+    justify-content: space-between; */
+  }
+
+  footer h4 {
+    /* color: #353535;
+    font-size: 1.2em;
+    font-weight: 400; */
+    font-size: 1.3em;
+  }
+
+}
 
 
 
