--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ a {
   margin: 15px auto 0 auto;
   line-height: 1.35;
   max-width: 380px;
+  text-align: justify;
 }
 
 
@@ -84,6 +85,7 @@ a {
   border-top: 1px solid rgb(101, 101, 129);
   width: 90%;
   margin: 0 auto;
+  max-width: 500px;
 }
 /*--- Section Titles ---*/
 .section-title {
@@ -96,10 +98,6 @@ a {
   width: 90%;
   margin: 40px auto;
   text-align: center;
-}
-
-.projects-container {
-  /* This will be used for FlexBox*/
 }
 
 /*-------   Projects   -------*/
@@ -295,7 +293,8 @@ footer h4 {
     padding: 0;
     display: flex;
     justify-content: space-between;
-    width: 450px;
+    width: 83%;
+    max-width: 500px;
     margin: auto;
   }
   .nav-section {
@@ -328,6 +327,7 @@ footer h4 {
 
   /*----  Bio & Contact  ----*/
   #bio p,
+  .contact-intro,
   .contact-phone p,
   .contact-email p,
   .contact-phone a,
@@ -338,6 +338,325 @@ footer h4 {
   /*----  Footer Menu  ----*/
   footer h4 {
     font-size: 1.3em;
+  }
+}
+
+
+
+/*___________________________________
+-----------  MOBILE XXL  ------------
+-------------------------------------*/
+@media all and (min-width: 700px) {
+  /*----  Profile ----*/
+  #profile p {
+    max-width: 510px;
+  }
+
+  /*----  Portfolio  ----*/
+  .projects-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 650px;
+    margin: auto;
+  }
+  /*-- Projects --*/
+  .project {
+    margin: 30px 0 0 0;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*__________________________________
+------------   TABLET   ------------
+------------------------------------*/
+@media all and (min-width: 768px) {
+  body {
+    /* background-color: orange; */
+  }
+  /*----  Navigation ----*/
+  #main-nav {
+    /* text-align: center;
+    background: #7ea2e6;
+    box-shadow: 0 5px 15px #A7BFE8;
+    padding-bottom: 10px; */
+  }
+  .name {
+    /* padding: 20px 0;
+    color: #353535; */
+  }
+  #nav-sections {
+    /* padding: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 83%;
+    max-width: 500px;
+    margin: auto; */
+  }
+  .nav-section {
+    /* font-size: 1.45em;
+    font-weight: 400;
+    padding: 5px 10px; */
+  }
+  #main-nav a {
+    /* color: #353535; */
+  }
+
+  /*----  Profile ----*/
+  #profile {
+    /* text-align: center;
+    margin-bottom: 40px; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 860px;
+    margin: 40px auto;
+  }
+  .profile-pic {
+    /* margin-top: 40px;
+    width: 72%;
+    border-radius: 5px;
+    max-width: 380px; */
+    width: 48%;
+    margin: 0;
+    /* border: 2px solid rgb(44, 46, 139); */
+  }
+  #profile p {
+    /* width: 90%; */
+    /* margin: 15px auto 0 auto; */
+    /* line-height: 1.35; */
+    /* max-width: 510px; */
+    /* font-size: 1.04em; */
+    font-size: 1.2em;
+    line-height: 1.4;
+    width: 48%;
+    max-width: 410px;
+    margin: 0;
+    /* border: 1px solid rgb(138, 138, 163); */
+  }
+
+
+
+
+
+
+
+
+
+
+  /*--- Section Titles ---*/
+  .section-title {
+    /* font-size: 2em; */
+  }
+
+  /*----  Portfolio  ----*/
+  #portfolio {
+    /* width: 90%; */
+    /* margin: 40px auto; */
+    /* text-align: center; */
+    /* border: 1px solid rgb(68, 15, 15); */
+  }
+  .projects-container {
+    /* display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 650px;
+    margin: auto; */
+  }
+  /*-- Projects --*/
+  .project {
+    /* margin: 30px 0 0 0; */
+    /* border: 1px solid rgba(168, 168, 168, 0.418); */
+    /* background-color: rgba(168, 168, 168, 0.045); */
+    /* border-radius: 5px; */
+    /* padding: 12px 12px 20px 12px; */
+    /* width: 300px; */
+    /* height: 340px; */
+  }
+  .project-pic {
+    /* width: 100%; */
+    /* border-radius: 4px; */
+  }
+  .project-title {
+    /* font-weight: 400; */
+    /* font-size: 1.6em; */
+    /* margin-top: 25px; */
+    font-size: 1.63em;
+  }
+  .project-text {
+    /* margin-top: 10px; */
+    /* margin-top: 15px; */
+    /* font-size: 1.01em; */
+    /* line-height: 1.3; */
+    font-size: 1.03em;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  /*----  Bio & Contact  ----*/
+  #bio p {
+    /* margin-top: 22px;
+    line-height: 1.35;
+    font-style: italic; */
+    /* font-size: 1.01em; */
+    font-size: 1.03em;
+    line-height: 1.4;
+  }
+
+
+
+
+/***********************************************************------ MARKER*/
+  .contact-flex {
+    border: 1px solid tomato;
+    margin-top: 22px;
+    display: flex;
+  }
+
+  .contact-intro {
+    /* margin-top: 22px;
+    line-height: 1.35; */
+    margin: 0;
+    font-size: 1.03em;
+    line-height: 1.4;
+  }
+
+  .phone-email-wrapper {
+    background-color: orange;
+  }
+  /*-----  Phone & Email  -----*/
+  .contact-phone,
+  .contact-email {
+    /* width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center; */
+    background-color: orange;
+  }
+
+  .contact-phone {
+    /* margin: 30px auto 0 auto; */
+  }
+  .contact-email {
+    /* margin: 15px auto 0 auto; */
+  }
+
+
+
+
+
+
+
+
+  /*- Icons -*/
+  .contact-phone img,
+  .contact-email img {
+    /* width: 15px;
+    height: 15px; */
+  }
+
+  .contact-phone p,
+  .contact-email p,
+  .contact-phone a,
+  .contact-email a {
+    /* padding-left: 5px; */
+    /* font-size: 1.01em; */
+    font-size: 1.03em;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+  /*----  Footer Menu  ----*/
+  footer {
+    /* margin-top: 50px;
+    padding: 30px 4%;
+    border-top: 1px solid rgba(168, 168, 168, 0.418);
+    display: flex;
+    justify-content: space-between; */
+  }
+  footer h4 {
+    /* color: #353535;
+    font-size: 1.3em;
+    font-weight: 400; */
   }
 }
 
@@ -392,11 +711,13 @@ footer h4 {
 
 
 
-/***********************************************************------ MARKER*/
 /* ___________________________________________
 -------------  NEXT BREAK POINT  -------------
 ---------------------------------------------- */
 @media all and (min-width: 1000px) {
+  body {
+    /* background-color: orange; */
+  }
   /*----  Navigation ----*/
   #main-nav {
     /* text-align: center;
@@ -412,7 +733,8 @@ footer h4 {
     /* padding: 0;
     display: flex;
     justify-content: space-between;
-    width: 450px;
+    width: 83%;
+    max-width: 500px;
     margin: auto; */
   }
   .nav-section {
@@ -423,7 +745,6 @@ footer h4 {
   #main-nav a {
     /* color: #353535; */
   }
-
 
   /*----  Profile ----*/
   #profile {
@@ -438,10 +759,10 @@ footer h4 {
   }
 
   #profile p {
-    /* width: 90%;
-    margin: 15px auto 0 auto;
-    line-height: 1.35;
-    max-width: 440px; */
+    /* width: 90%; */
+    /* margin: 15px auto 0 auto; */
+    /* line-height: 1.35; */
+    /* max-width: 510px; */
     /* font-size: 1.04em; */
   }
   /*--- Section Titles ---*/
@@ -449,19 +770,23 @@ footer h4 {
     /* font-size: 2em; */
   }
 
-
   /*----  Portfolio  ----*/
   #portfolio {
     /* width: 90%; */
     /* margin: 40px auto; */
     /* text-align: center; */
+    /* border: 1px solid rgb(68, 15, 15); */
   }
   .projects-container {
-    /* This will be used for FlexBox*/
+    /* display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 650px;
+    margin: auto; */
   }
   /*-- Projects --*/
   .project {
-    /* margin: 30px auto 0 auto; */
+    /* margin: 30px 0 0 0; */
     /* border: 1px solid rgba(168, 168, 168, 0.418); */
     /* background-color: rgba(168, 168, 168, 0.045); */
     /* border-radius: 5px; */
@@ -513,5 +838,4 @@ footer h4 {
     font-size: 1.3em;
     font-weight: 400; */
   }
-
 }
