--- a/css/style.css
+++ b/css/style.css
@@ -418,6 +418,7 @@ footer h4,
   .contact-intro {
     margin: 22px auto 0 auto;
     width: 510px;
+    font-size: 1.03em;
   }
   .phone-email-wrapper {
     display: flex;
@@ -486,24 +487,76 @@ footer h4,
 
 
 
-/***********************************************************------ MARKER*/
-/* ___________________________________________
--------------  NEXT BREAK POINT  -------------
----------------------------------------------- */
-@media all and (min-width: 1000px) {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*____________________________________
+------------   TABLET L   ------------
+--------------------------------------*/
+@media all and (min-width: 888px) {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   body {
     /* background-color: orange; */
   }
+
   /*----  Navigation ----*/
   #main-nav {
     /* text-align: center;
     background: #7ea2e6;
     box-shadow: 0 5px 15px #A7BFE8;
     padding-bottom: 10px; */
+    height: 110px;
+    padding: 0;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   .name {
     /* padding: 20px 0;
     color: #353535; */
+    padding: 0;
+    font-size: 2.05em; /*BEFORE: 2em*/
   }
   #nav-sections {
     /* padding: 0;
@@ -512,15 +565,37 @@ footer h4,
     width: 83%;
     max-width: 500px;
     margin: auto; */
-  }
+    margin: 0;
+    width: 400px;
+  }  
   .nav-section {
     /* font-size: 1.45em;
     font-weight: 400;
     padding: 5px 10px; */
+    padding: 0;
+    font-size: 1.55em;
   }
   #main-nav a {
     /* color: #353535; */
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   /*----  Profile ----*/
   #profile {
@@ -546,11 +621,24 @@ footer h4,
     font-size: 1.2em; */
   }
 
+
+
+
+
+
+
   /*--- Section Titles ---*/
   .section-title {
     /* font-size: 2em; */
+    font-size: 2.05em
   }
 
+
+
+
+
+
+/***********************************************************------ MARKER*/
   /*----  Portfolio  ----*/
   #portfolio {
     /* width: 90%; */
@@ -564,7 +652,11 @@ footer h4,
     flex-wrap: wrap;
     max-width: 650px;
     margin: auto; */
+    margin-top: 14px;
+    max-width: none;
   }
+
+
   /*-- Projects --*/
   .project {
     /* margin: 30px 0 0 0; */
@@ -574,22 +666,46 @@ footer h4,
     /* padding: 12px 12px 20px 12px; */
     /* width: 300px; */
     /* height: 340px; */
+    margin: 16px 0 0 0;
+    width: 250px;
+    height: 290px;
   }
+
+
   .project-pic {
     /* width: 100%; */
     /* border-radius: 4px; */
+    border-radius: 4px;
   }
   .project-title {
     /* font-weight: 400; */
     /* font-size: 1.63em; */
     /* margin-top: 25px; */
+    font-size: 1.46em;
+    margin-top: 15px;
   }
   .project-text {
-    /* margin-top: 10px; */
     /* margin-top: 15px; */
     /* font-size: 1.03em; */
     /* line-height: 1.3; */
+    margin-top: 10px;
+    font-size: 0.93em;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   /*----  Bio & Contact  ----*/
   #bio p {
     /* margin: 22px auto 0 auto;
@@ -682,4 +798,35 @@ footer h4,
     width: 50%;
     max-width: 388px; */
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
