--- a/css/style.css
+++ b/css/style.css
@@ -514,30 +514,9 @@ footer h4,
 ------------   TABLET L   ------------
 --------------------------------------*/
 @media all and (min-width: 888px) {
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   body {
     /* background-color: orange; */
   }
-
   /*----  Navigation ----*/
   #main-nav {
     /* text-align: center;
@@ -579,6 +558,87 @@ footer h4,
     /* color: #353535; */
   }
 
+  /*----  Profile ----*/
+  #profile {
+    /* text-align: center;
+    margin: 40px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 860px; */
+  }
+  .profile-pic {
+    /* margin: 0;
+    width: 48%;
+    border-radius: 5px;
+    max-width: 380px; */
+  }
+  #profile p {
+    /* width: 48%;
+    margin: 0;
+    line-height: 1.4;
+    max-width: 410px;
+    font-size: 1.2em; */
+  }
+  /*--- Section Titles ---*/
+  .section-title {
+    font-size: 2.05em
+  }
+
+
+
+
+
+
+  /*--- Separators ---*/
+  .separator {
+    width: 65%;
+    max-width: 730px;
+  }
+
+
+
+
+
+
+  /*----  Portfolio  ----*/
+  .projects-container {
+    margin-top: 14px;
+    max-width: 800px;
+  }
+
+
+
+
+  /*-- Projects --*/
+  .project {
+    padding: 10px;
+    margin: 16px 0 0 0;
+    width: 250px;
+    height: 290px;
+  }
+
+
+  
+  .project-title {
+    font-size: 1.46em;
+    margin-top: 15px;
+  }
+
+
+
+  .project-text {
+    margin-top: 10px;
+    font-size: 0.93em;
+  }
+
+
+  /*----  Footer Menu  ----*/
+  footer h4,
+  .nav-section_2 {
+    font-size: 1.5em;
+  }
 
 
 
@@ -588,6 +648,11 @@ footer h4,
 
 
 
+}
+
+
+
+/*****************************************************************************------ MARKER*/
 
 
 
@@ -595,7 +660,47 @@ footer h4,
 
 
 
-
+/*____________________________________________
+------------   NEXT BREAK POINT   ------------
+----------------------------------------------*/
+@media all and (min-width: 1000px) {
+  body {
+    /* background-color: orange; */
+  }
+  /*----  Navigation ----*/
+  #main-nav {
+    /* text-align: center;
+    background: #7ea2e6;
+    box-shadow: 0 5px 15px #A7BFE8;
+    height: 110px;
+    padding: 0;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;*/
+  }
+  .name {
+    /* padding: 0;
+    color: #353535;
+    font-size: 2.05em; */
+  }
+  #nav-sections {
+    /* padding: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 400px;
+    max-width: 500px;
+    margin: 0; */
+  }  
+  .nav-section {
+    /* font-size: 1.55em;
+    font-weight: 400;
+    padding: 0; */
+  }
+  #main-nav a {
+    /* color: #353535; */
+  }
 
   /*----  Profile ----*/
   #profile {
@@ -620,25 +725,17 @@ footer h4,
     max-width: 410px;
     font-size: 1.2em; */
   }
-
-
-
-
-
-
-
   /*--- Section Titles ---*/
   .section-title {
-    /* font-size: 2em; */
-    font-size: 2.05em
+    /* font-size: 2.05em */
   }
-
-
-
-
-
-
-/***********************************************************------ MARKER*/
+  /*--- Separators ---*/
+  .separator {
+    /* border-top: 1px solid rgb(101, 101, 129);
+    width: 65%;
+    margin: 0 auto;
+    max-width: 730px; */
+  }
   /*----  Portfolio  ----*/
   #portfolio {
     /* width: 90%; */
@@ -650,61 +747,35 @@ footer h4,
     /* display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 650px;
-    margin: auto; */
-    margin-top: 14px;
-    max-width: none;
+    max-width: 800px;
+    margin: auto;
+    margin-top: 14px;*/
   }
-
 
   /*-- Projects --*/
   .project {
-    /* margin: 30px 0 0 0; */
+    /* margin: 16px 0 0 0; */
     /* border: 1px solid rgba(168, 168, 168, 0.418); */
     /* background-color: rgba(168, 168, 168, 0.045); */
     /* border-radius: 5px; */
     /* padding: 12px 12px 20px 12px; */
-    /* width: 300px; */
-    /* height: 340px; */
-    margin: 16px 0 0 0;
-    width: 250px;
-    height: 290px;
+    /* width: 250px; */
+    /* height: 290px; */
   }
-
-
   .project-pic {
     /* width: 100%; */
     /* border-radius: 4px; */
-    border-radius: 4px;
   }
   .project-title {
     /* font-weight: 400; */
-    /* font-size: 1.63em; */
-    /* margin-top: 25px; */
-    font-size: 1.46em;
-    margin-top: 15px;
+    /* font-size: 1.46em; */
+    /* margin-top: 15px; */
   }
   .project-text {
-    /* margin-top: 15px; */
-    /* font-size: 1.03em; */
     /* line-height: 1.3; */
-    margin-top: 10px;
-    font-size: 0.93em;
+    /* margin-top: 10px;
+    font-size: 0.93em; */
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   /*----  Bio & Contact  ----*/
   #bio p {
@@ -716,10 +787,6 @@ footer h4,
   }
   #contact {
     /* border: 1px solid black; */
-  }
-  .contact-flex {
-    /* border: 1px solid tomato; */
-    /*NOT BEING USED*/
   }
   .contact-intro {
     /* margin: 22px auto 0 auto;
@@ -750,8 +817,6 @@ footer h4,
     /* margin: 15px auto 0 auto; */
     /* margin: 0; */
   }
-
-
   /*- Icons -*/
   .contact-phone img,
   .contact-email img {
@@ -765,6 +830,7 @@ footer h4,
     /* padding-left: 5px; */
     /* font-size: 1.03em; */
   }
+
   /*----  Footer Menu  ----*/
   footer {
     /* margin-top: 50px;
@@ -773,24 +839,20 @@ footer h4,
     display: flex;
     justify-content: space-between; */
   }
-  
   footer h4,
   .nav-section_2 {
     /* color: #353535;
-    font-size: 1.4em;
+    font-size: 1.5em;
     font-weight: 400; */
   }
-
   .back-to-top,
   .back-to-top * {
     /* display: none; */
   }
-
   #nav-sections_2,
   #nav-sections_2 * {
     /* display: block; */
   }
-
   /*Nav container*/
   #nav-sections_2 {
     /* display: flex;
@@ -798,35 +860,25 @@ footer h4,
     width: 50%;
     max-width: 388px; */
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
