--- a/css/style.css
+++ b/css/style.css
@@ -470,9 +470,7 @@ footer h4,
   /*----  Navigation ----*/
   #main-nav {
     height: 110px;
-    padding: 0;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
+    padding: 0 2.5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -527,112 +525,138 @@ footer h4,
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*****************************************************************************------ MARKER*/
 /*_________________________________________
 ----------------   LAPTOP   ---------------
 -------------------------------------------*/
 @media all and (min-width: 1024px) {
-  body {
-    /* background-color: orange; */
-  }
-  /*----  Navigation ----*/
-  #main-nav {
-    /* text-align: center;
-    background: #7ea2e6;
-    box-shadow: 0 5px 15px #A7BFE8;
-    height: 110px;
-    padding: 0;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;*/
-  }
-  .name {
-    /* padding: 0;
-    color: #353535;
-    font-size: 2.05em; */
-  }
-  #nav-sections {
-    /* padding: 0;
-    display: flex;
-    justify-content: space-between;
-    width: 400px;
-    max-width: 500px;
-    margin: 0; */
-  }  
-  .nav-section {
-    /* font-size: 1.55em;
-    font-weight: 400;
-    padding: 0; */
-  }
-  #main-nav a {
-    /* color: #353535; */
-  }
-  
   /*----  Profile ----*/
   #profile {
-    /* text-align: center;
-    margin: 40px auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    max-width: 860px; */
     max-width: 1100px;
   }
   .profile-pic {
-    /* margin: 0;
-    width: 48%;
-    border-radius: 5px;
-    max-width: 380px; */
     max-width: 440px;
   }
   #profile p {
-    /* width: 48%;
-    margin: 0;
-    line-height: 1.4;
-    max-width: 410px;
-    font-size: 1.2em; */
     max-width: 500px;
     font-size: 1.3em;
   }
+  /*----  Portfolio  ----*/
+  .projects-container {
+    margin-top: 0;
+    max-width: 950px;
+  }
+  /*-- Projects --*/
+  .project {
+    margin-top: 30px;
+    width: 290px;
+    height: 340px;
+    border-width: 2px;
+  }
+  .project-title {
+    margin-top: 15px;
+    font-size: 1.56em;
+  }
+  .project-text {
+    margin-top: 15px;
+    font-size: 1.02em;
+  }
+  /*----  Bio & Contact  ----*/
+  #bio p {
+    max-width: 900px;
+    font-size: 1.13em;
+  }
+  .contact-intro {
+    font-size: 1.13em;
+    width: 85%;
+  }
+  .phone-email-wrapper {
+    margin-top: 40px;
+    width: 600px;
+  }
+  /*-----  Phone & Email  -----*/
+  .contact-phone p,
+  .contact-email p,
+  .contact-phone a,
+  .contact-email a {
+    font-size: 1.13em;
+  }
+}
 
 
 
 
 
-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*_________________________________________
+---------------   LAPTOP L   --------------
+-------------------------------------------*/
+@media all and (min-width: 1440px) {
+  /*----  Navigation ----*/
+  #main-nav {
+    box-shadow: 0 8px 20px #A7BFE8;
+    height: 120px;
+    padding: 0 3%;
+  }
+  .name {
+    /* font-size: 2.05em; */
+    font-size: 2.2em;
+  }
+  #nav-sections {
+    width: 500px;
+    /* font-size: 1em; */
+    /* font-size: 1.2em; */
+  }
+  .nav-section {
+    /* font-size: 1.55em; */
+    font-size: 1.75em;
+  }
+  /*----  Profile ----*/
+  #profile {
+    max-width: 1200px;
+  }
+  .profile-pic {
+    max-width: 480px;
+  }
+  #profile p {
+    max-width: none;
+    width: 610px;
+    font-size: 1.4em;
+  }
   /*--- Section Titles ---*/
   .section-title {
-    /* font-size: 2.05em */
+    font-size: 2.15em
   }
   /*--- Separators ---*/
   .separator {
-    /* border-top: 1px solid rgb(101, 101, 129);
-    width: 65%;
-    margin: 0 auto;
-    max-width: 730px; */
+    border-top-width: 2px;
+    max-width: 850px;
   }
 
 
@@ -644,7 +668,6 @@ footer h4,
 
 
 
-  
   /*----  Portfolio  ----*/
   #portfolio {
     /* width: 90%; */
@@ -656,73 +679,84 @@ footer h4,
     /* display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 800px;
-    margin: auto;
-    margin-top: 14px;*/
-    margin-top: 0;
     max-width: 950px;
+    margin: auto;
+    margin-top: 0;*/
+    max-width: 1200px;
+    
   }
+
+
+
+
 
   /*-- Projects --*/
   .project {
-    /* margin: 16px 0 0 0; */
-    /* border: 1px solid rgba(168, 168, 168, 0.418); */
+    /* margin: 30px 0 0 0; */
+    /* border: 2px solid rgba(168, 168, 168, 0.418); */
     /* background-color: rgba(168, 168, 168, 0.045); */
     /* border-radius: 5px; */
     /* padding: 12px 12px 20px 12px; */
-    /* width: 250px; */
-    /* height: 290px; */
-    margin: 30px 0 0 0;
-    width: 290px;
-    height: 340px;
-    border-width: 2px;
+    padding: 15px 15px 0 15px;
+    padding-bottom: 0;
+    /* width: 290px; */
+    width: 375px;
+    /* height: 340px; */
+    height: 420px;
   }
+
+
+
+
+
+
   .project-pic {
     /* width: 100%; */
     /* border-radius: 4px; */
   }
+
+
+
   .project-title {
     /* font-weight: 400; */
-    /* font-size: 1.46em; */
+    /* font-size: 1.56em; */
+    font-size: 1.8em;
     /* margin-top: 15px; */
-    margin-top: 20px;
-    font-size: 1.56em;
   }
   .project-text {
     /* line-height: 1.3; */
-    /* margin-top: 10px;
-    font-size: 0.93em; */
+    /* margin-top: 15px; */
     margin-top: 15px;
-    font-size: 1.02em;
+    /* font-size: 1.02em; */
+    font-size: 1.18em;
   }
 
+
+
+  
+/*****************************************************************************------ MARKER*/
   /*----  Bio & Contact  ----*/
   #bio p {
     /* margin: 22px auto 0 auto;
     line-height: 1.4;
     font-style: italic;
-    font-size: 1.03em;
-    max-width: 785px; */
-    max-width: 900px;
     font-size: 1.13em;
+    max-width: 900px; */
   }
   #contact {
     /* border: 1px solid black; */
   }
   .contact-intro {
     /* margin: 22px auto 0 auto;
-    line-height: 1.35;
-    width: 510px; */
     font-size: 1.13em;
-    width: 85%;
+    line-height: 1.35;
+    width: 85%; */
   }
   .phone-email-wrapper {
     /* display: flex;
     justify-content: space-between;
-    margin: 30px auto 0 auto;
-    width: 500px; */
-    margin-top: 40px;
-    width: 600px;
+    margin: 40px auto 0 auto;
+    width: 600px; */
   }
   /*-----  Phone & Email  -----*/
   .contact-phone,
@@ -753,10 +787,8 @@ footer h4,
   .contact-phone a,
   .contact-email a {
     /* padding-left: 5px; */
-    /* font-size: 1.03em; */
-    font-size: 1.13em;
+    /* font-size: 1.13em; */
   }
-
   /*----  Footer Menu  ----*/
   footer {
     /* margin-top: 50px;
